--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,6 +23,25 @@ form {
 	text-align: center;
 }
 
+.pagination {
+	margin-top: 2rem;
+	text-align: center;
+}
+
+.pagination a {
+	text-decoration: none;
+	color: #00695c;
+	padding: 0.5rem;
+	border: 1px solid #00695c;
+	margin: 0 1rem;
+}
+
+.pagination a:hover,
+.pagination a:active {
+	background: #00695c;
+	color: white;
+}
+
 .main-header {
 	width: 100%;
 	height: 3.5rem;
