--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -36,10 +36,7 @@
       </article>
       <% } %>
     </div>
-    <section class="pagination">
-      <a href="/admin/products?page=1">1</a>
-      <a href="/admin/products?page=2">2</a>
-    </section>
+    <%- include('../includes/pagination.ejs') %>
     <% } else { %>
     <h1>No Products Found!</h1>
     <% } %>
