--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -28,10 +28,9 @@
         </div>
         <div class="card__actions">
           <a href="/admin/edit-product/<%= product._id %>?edit=true&price=<%= product.price %>&title=<%= product.title %>&description=<%= product.description %>&imageUrl=<%= product.imageUrl %>&id=<%= product._id %>" class="btn">Edit</a>
-          <form action="/admin/delete-product/<%= product._id %>" method="POST">
-            <button class="btn" type="submit">Delete</button>
-          </form>
-
+          <button class="btn" id="adminDelete" type="button" onclick="deleteProduct(this)">Delete</button>
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+          <input type="hidden" name="productID" value="<%= product._id %>">
         </div>
       </article>
       <% } %>
@@ -42,3 +41,4 @@
     <% } %>
   </main>
   <%- include('../includes/end.ejs') %>
+  <script src="../javascript/admin_products.js" defer></script>
